refactor: clean up CSS codes

--- a/src/gadgets/float-toc/MediaWiki:Gadget-float-toc.css
+++ b/src/gadgets/float-toc/MediaWiki:Gadget-float-toc.css
@@ -30,9 +30,7 @@ body.overlay-scrollbars.skin-vector .tocfloat {
     transform: none;
 }
 
-body.overlay-scrollbars.skin-vector .tocfloat:hover,
-body.overlay-scrollbars.skin-vector .tocfloat:active,
-body.overlay-scrollbars.skin-vector .tocfloat:focus {
+body.overlay-scrollbars.skin-vector .tocfloat:is(:hover, :active, :focus) {
     /* 因为无法计算滚动条宽度，只能使用预设值 */
     transform: translate(-20px);
 }
