--- a/src/gadgets/vector-styles/MediaWiki:Gadget-vector-styles.css
+++ b/src/gadgets/vector-styles/MediaWiki:Gadget-vector-styles.css
@@ -5,9 +5,9 @@
  * 复制之后请把图片换成自己网站上URL地址！
  */
 
-/* 2022春季topbar */
+/* 2023春季topbar */
 body.skin-vector {
-    background: url("https://app.moegirl.org.cn/background/ZhMoegirl_12ndAnniversary/vector.png") no-repeat top left #F6F6F6;
+    background: url("https://img.moegirl.org.cn/common/d/d2/Moegirl_2023SpringFestival_Vector.png") no-repeat top left #F6F6F6;
 }
 
 /* 侧边栏、顶部栏 */
