feat: replace image link

--- a/src/gadgets/vector-styles/MediaWiki:Gadget-vector-styles.css
+++ b/src/gadgets/vector-styles/MediaWiki:Gadget-vector-styles.css
@@ -7,7 +7,7 @@
 
 /* 2023春季topbar */
 body.skin-vector {
-    background: url("https://img.moegirl.org.cn/common/3/39/2023NewYear_Vector.png") no-repeat top left #F6F6F6;
+    background: url("https://app.moegirl.org.cn/background/2023NewYear/vector.png") no-repeat top left #F6F6F6;
 }
 
 /* 侧边栏、顶部栏 */
