fix: Fix CSS code

--- a/src/gadgets/backlog/MediaWiki:Gadget-backlog.css
+++ b/src/gadgets/backlog/MediaWiki:Gadget-backlog.css
@@ -119,7 +119,7 @@
 }
 
 .pageAwaitingDelection-table .warning {
-    font-weight: italic;
+    font-style: italic;
     text-decoration: underline;
 }
 
