feat: responsive size

--- a/src/gadgets/MarkAsResolved/MediaWiki:Gadget-MarkAsResolved.css
+++ b/src/gadgets/MarkAsResolved/MediaWiki:Gadget-MarkAsResolved.css
@@ -15,5 +15,7 @@
 }
 
 .AnnTools_RadioSelectWidget_column_2.oo-ui-radioSelectWidget > .oo-ui-radioOptionWidget {
-    width: 50%;
+    min-width: 50%;
+    width: max-content;
+    max-width: 100%;
 }
