fix(Gadget-hideAutopromoteLog): Make hidden only in log page

--- a/src/gadgets/hideAutopromoteLog/MediaWiki:hideAutoPromoteLog.css
+++ b/src/gadgets/hideAutopromoteLog/MediaWiki:hideAutoPromoteLog.css
@@ -1,3 +1,3 @@
-.page-Special_日志 li.mw-logline-rights[data-mw-logaction="rights/autopromote"] {
+body.mw-special-Log li.mw-logline-rights[data-mw-logaction="rights/autopromote"] {
     display: none;
 }
