--- a/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
+++ b/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
@@ -768,10 +768,7 @@ body.page-Mainpage.rootpage-Mainpage #contentSub {
 /* Extension:MultimediaViewer的半透明化修改  */
 .mw-mmv-overlay {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
     background-color: rgb(0 0 0 / 80%);
     opacity: 0.73;
 }
