确实疏忽了小工具

--- a/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
+++ b/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
@@ -329,7 +329,8 @@ span.heimu img {
     transition: opacity .13s linear;
 }
 
-span.heimu:hover img {
+span.heimu:hover img,
+body.heimu_toggle_on span.heimu img{
     opacity:revert;
 }
 
