--- a/src/gadgets/backlog/MediaWiki:Gadget-backlog.css
+++ b/src/gadgets/backlog/MediaWiki:Gadget-backlog.css
@@ -55,7 +55,7 @@
     margin: 0 !important;
 }
 
-@media (max-width: 1200px) {
+@media (width <= 1200px) {
     .blocklogevents,
     .abuselogevents {
         overflow-x: auto;
