--- a/src/gadgets/ReferenceTooltips/MediaWiki:Gadget-ReferenceTooltips.css
+++ b/src/gadgets/ReferenceTooltips/MediaWiki:Gadget-ReferenceTooltips.css
@@ -1,14 +1,17 @@
-/* See [[mw:Reference Tooltips]] */
+/**
+ * @source https://en.wikipedia.org/wiki/_?oldid=1099886701
+ * 更新后请同步更新上面链接到最新版本
+ */
 
 .rt-tooltip {
     position: absolute;
     z-index: 100;
     max-width: 350px;
-    background: #FFF;
+    background: #fff;
     color: #222;
     font-size: 13px;
     line-height: 1.5em;
-    border: 1px solid #C8CCD1;
+    border: 1px solid #c8ccd1;
     border-radius: 3px;
     box-shadow: 0 15px 45px -10px rgb(0 0 0 / 30%);
     overflow-wrap: break-word;
@@ -40,38 +43,32 @@
 }
 
 .rt-tooltipTail {
-    background: #C8CCD1;
-    background: -webkit-linear-gradient(bottom left, #C8CCD1 50%, rgb(0 0 0 / 0%) 50%);
-    background: linear-gradient(to top right, #C8CCD1 50%, rgb(0 0 0 / 0%) 50%);
+    background: linear-gradient(to top right, #c8ccd1 50%, rgb(0 0 0 / 0%) 50%);
 }
 
 .rt-tooltipTail::after {
     content: "";
-    background: #FFF;
+    background: #fff;
     bottom: 1px;
     left: 1px;
 }
 
 .rt-tooltip-above .rt-tooltipTail {
-    -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
-    -webkit-transform-origin: 100% 100%;
     transform-origin: 100% 100%;
     bottom: 0;
     left: 15px;
 }
 
 .rt-tooltip-below .rt-tooltipTail {
-    -webkit-transform: rotate(135deg);
     transform: rotate(135deg);
-    -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
     top: 0;
     left: 27px;
 }
 
 .rt-settingsLink {
-    background-image: linear-gradient(transparent, transparent), url("data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0D%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%3E%0D%0A%20%20%20%20%3Cpath%20fill%3D%22%23555%22%20d%3D%22M20%2014.5v-2.9l-1.8-.3c-.1-.4-.3-.8-.6-1.4l1.1-1.5-2.1-2.1-1.5%201.1c-.5-.3-1-.5-1.4-.6L13.5%205h-2.9l-.3%201.8c-.5.1-.9.3-1.4.6L7.4%206.3%205.3%208.4l1%201.5c-.3.5-.4.9-.6%201.4l-1.7.2v2.9l1.8.3c.1.5.3.9.6%201.4l-1%201.5%202.1%202.1%201.5-1c.4.2.9.4%201.4.6l.3%201.8h3l.3-1.8c.5-.1.9-.3%201.4-.6l1.5%201.1%202.1-2.1-1.1-1.5c.3-.5.5-1%20.6-1.4l1.5-.3zM12%2016c-1.7%200-3-1.3-3-3s1.3-3%203-3%203%201.3%203%203-1.3%203-3%203z%22%2F%3E%0D%0A%3C%2Fsvg%3E");
+    background-image: url("data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0D%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%3E%0D%0A%20%20%20%20%3Cpath%20fill%3D%22%23555%22%20d%3D%22M20%2014.5v-2.9l-1.8-.3c-.1-.4-.3-.8-.6-1.4l1.1-1.5-2.1-2.1-1.5%201.1c-.5-.3-1-.5-1.4-.6L13.5%205h-2.9l-.3%201.8c-.5.1-.9.3-1.4.6L7.4%206.3%205.3%208.4l1%201.5c-.3.5-.4.9-.6%201.4l-1.7.2v2.9l1.8.3c.1.5.3.9.6%201.4l-1%201.5%202.1%202.1%201.5-1c.4.2.9.4%201.4.6l.3%201.8h3l.3-1.8c.5-.1.9-.3%201.4-.6l1.5%201.1%202.1-2.1-1.1-1.5c.3-.5.5-1%20.6-1.4l1.5-.3zM12%2016c-1.7%200-3-1.3-3-3s1.3-3%203-3%203%201.3%203%203-1.3%203-3%203z%22%2F%3E%0D%0A%3C%2Fsvg%3E");
     float: right;
     cursor: pointer;
     margin: -4px -4px 0 8px;
@@ -84,11 +81,11 @@
 }
 
 .rt-settingsLink:hover {
-    background-color: #EEE;
+    background-color: #eee;
 }
 
 .rt-target {
-    background-color: #DEF;
+    background-color: #def;
 }
 
 .rt-enableSelect {
@@ -121,82 +118,14 @@
     font-weight: bold;
 }
 
-@-webkit-keyframes rt-fade-in-up {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate(0, 20px);
-        -moz-transform: translate(0, 20px);
-        transform: translate(0, 20px);
-    }
-
-    100% {
-        opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
-        transform: translate(0, 0);
-    }
-}
-
-@-moz-keyframes rt-fade-in-up {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate(0, 20px);
-        -moz-transform: translate(0, 20px);
-        transform: translate(0, 20px);
-    }
-
-    100% {
-        opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
-        transform: translate(0, 0);
-    }
-}
-
 @keyframes rt-fade-in-up {
     0% {
         opacity: 0;
-        -webkit-transform: translate(0, 20px);
-        -moz-transform: translate(0, 20px);
         transform: translate(0, 20px);
     }
 
     100% {
         opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
-        transform: translate(0, 0);
-    }
-}
-
-@-webkit-keyframes rt-fade-in-down {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate(0, -20px);
-        -moz-transform: translate(0, -20px);
-        transform: translate(0, -20px);
-    }
-
-    100% {
-        opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
-        transform: translate(0, 0);
-    }
-}
-
-@-moz-keyframes rt-fade-in-down {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate(0, -20px);
-        -moz-transform: translate(0, -20px);
-        transform: translate(0, -20px);
-    }
-
-    100% {
-        opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
         transform: translate(0, 0);
     }
 }
@@ -204,135 +133,51 @@
 @keyframes rt-fade-in-down {
     0% {
         opacity: 0;
-        -webkit-transform: translate(0, -20px);
-        -moz-transform: translate(0, -20px);
         transform: translate(0, -20px);
     }
 
     100% {
         opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
         transform: translate(0, 0);
-    }
-}
-
-@-webkit-keyframes rt-fade-out-down {
-    0% {
-        opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
-        transform: translate(0, 0);
-    }
-
-    100% {
-        opacity: 0;
-        -webkit-transform: translate(0, 20px);
-        -moz-transform: translate(0, 20px);
-        transform: translate(0, 20px);
-    }
-}
-
-@-moz-keyframes rt-fade-out-down {
-    0% {
-        opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
-        transform: translate(0, 0);
-    }
-
-    100% {
-        opacity: 0;
-        -webkit-transform: translate(0, 20px);
-        -moz-transform: translate(0, 20px);
-        transform: translate(0, 20px);
     }
 }
 
 @keyframes rt-fade-out-down {
     0% {
         opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
         transform: translate(0, 0);
     }
 
     100% {
         opacity: 0;
-        -webkit-transform: translate(0, 20px);
-        -moz-transform: translate(0, 20px);
         transform: translate(0, 20px);
-    }
-}
-
-@-webkit-keyframes rt-fade-out-up {
-    0% {
-        opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
-        transform: translate(0, 0);
-    }
-
-    100% {
-        opacity: 0;
-        -webkit-transform: translate(0, -20px);
-        -moz-transform: translate(0, -20px);
-        transform: translate(0, -20px);
-    }
-}
-
-@-moz-keyframes rt-fade-out-up {
-    0% {
-        opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
-        transform: translate(0, 0);
-    }
-
-    100% {
-        opacity: 0;
-        -webkit-transform: translate(0, -20px);
-        -moz-transform: translate(0, -20px);
-        transform: translate(0, -20px);
     }
 }
 
 @keyframes rt-fade-out-up {
     0% {
         opacity: 1;
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
         transform: translate(0, 0);
     }
 
     100% {
         opacity: 0;
-        -webkit-transform: translate(0, -20px);
-        -moz-transform: translate(0, -20px);
         transform: translate(0, -20px);
     }
 }
 
 .rt-fade-in-up {
-    -webkit-animation: rt-fade-in-up 0.2s ease forwards;
-    -moz-animation: rt-fade-in-up 0.2s ease forwards;
     animation: rt-fade-in-up 0.2s ease forwards;
 }
 
 .rt-fade-in-down {
-    -webkit-animation: rt-fade-in-down 0.2s ease forwards;
-    -moz-animation: rt-fade-in-down 0.2s ease forwards;
     animation: rt-fade-in-down 0.2s ease forwards;
 }
 
 .rt-fade-out-down {
-    -webkit-animation: rt-fade-out-down 0.2s ease forwards;
-    -moz-animation: rt-fade-out-down 0.2s ease forwards;
     animation: rt-fade-out-down 0.2s ease forwards;
 }
 
 .rt-fade-out-up {
-    -webkit-animation: rt-fade-out-up 0.2s ease forwards;
-    -moz-animation: rt-fade-out-up 0.2s ease forwards;
     animation: rt-fade-out-up 0.2s ease forwards;
 }
