--- a/src/gadgets/Navigation_popups/MediaWiki:Gadget-popups.css
+++ b/src/gadgets/Navigation_popups/MediaWiki:Gadget-popups.css
@@ -162,3 +162,7 @@ a.popup_change_title_link {
     background: none !important;
     padding: 0 !important;
 }
+
+.popupPreview td:last-child {
+    word-break: break-all;
+}
