fix: 左侧的换行
补一个左侧 (差异 | 历史)	的多余换行修正

--- a/src/gadgets/Navigation_popups/MediaWiki:Gadget-popups.css
+++ b/src/gadgets/Navigation_popups/MediaWiki:Gadget-popups.css
@@ -163,6 +163,10 @@ a.popup_change_title_link {
     padding: 0 !important;
 }
 
+.popupPreview td:first-child {
+    word-break: keep-all;
+}
+
 .popupPreview td:last-child {
     word-break: break-all;
 }
