--- a/src/gadgets/dark-mode/MediaWiki:Gadget-dark-mode.css
+++ b/src/gadgets/dark-mode/MediaWiki:Gadget-dark-mode.css
@@ -20,11 +20,10 @@
  * Last updated: 2021-04-20
  *
  * 全部内容引自 https://en.wikipedia.org/wiki/MediaWiki:Gadget-dark-mode.css
- * 当前版本修改自 https://en.wikipedia.org/w/index.php?title=MediaWiki:Gadget-dark-mode.css&oldid=1064850831
  */
 
 /** To prevent 'jumping' effect within #p-personal in Vector. Overrides [[MediaWiki:Gadget-dark-mode-toggle-pagestyles.css]] **/
-body.skin-vector :not(#pt-darkmode)+#pt-watchlist::before {
+body.skin-vector :not(#pt-darkmode) + #pt-watchlist::before {
     content: "浅色主题";
 }
 
@@ -79,7 +78,7 @@ html {
     html #simpleSearch,
     html #simpleSearch #searchInput,
     html #siteNotice #centralNotice .cnotice {
-        background-color: #DDD;
+        background-color: #ddd;
     }
 
     html body.skin-vector #mw-panel #p-logo .mw-wiki-logo {
@@ -88,7 +87,7 @@ html {
     }
 
     html body.skin-vector {
-        background: no-repeat top left #F6F6F6;
+        background: no-repeat top left #f6f6f6;
     }
 
     html #footer-moegirl {
@@ -119,7 +118,7 @@ html {
     html #simpleSearch,
     html #simpleSearch #searchInput,
     html #siteNotice #centralNotice .cnotice {
-        border-color: #CDCBC8;
+        border-color: #cdcbc8;
     }
 
     /* Links */
@@ -136,7 +135,7 @@ html {
     html #mw-panel .portal .body li a {
         /* color: #69f; Proposal below for level AA conformance, see also https://phabricator.wikimedia.org/T233266
 	   `#36c` is transformed by :root `filter` to be closer to chosen `#69f`. */
-        color: #36C;
+        color: #36c;
     }
 
     /* Links: visited */
@@ -144,14 +143,14 @@ html {
     html .mw-parser-output a.extiw:visited,
     html #mw-panel .portal .body li a:visited {
         /* color: #709bbd; Proposal below uses to-be-standardized color from https://phabricator.wikimedia.org/T213778 */
-        color: #6B4BA1;
+        color: #6b4ba1;
     }
 
     /* Links: red */
     html a.new,
     html .vector-menu-tabs li.new a,
     html .vectorTabs li.new a {
-        color: #FF6E6E;
+        color: #ff6e6e;
     }
 
     /* ::: Special Element Treatments ::: */
@@ -166,7 +165,7 @@ html {
     /* `*not( .mbox-image )` exception doesn't work for unclear reasons */
     html .image img[src*="svg"],
     html img[src*="Wiktionary-logo"] {
-        background-color: #FFF;
+        background-color: #fff;
         border-radius: 1px;
     }
 
@@ -187,11 +186,11 @@ html {
 
     html .mwe-popups.flipped-y::after,
     html .mwe-popups.flipped-x-y::after {
-        border-top: 11px solid #DDD;
+        border-top: 11px solid #ddd;
     }
 
     html .mwe-popups.mwe-popups-no-image-pointer::after {
-        border-bottom: 11px solid #DDD;
+        border-bottom: 11px solid #ddd;
     }
 
     /* FlowThread */
@@ -201,7 +200,7 @@ html {
 
     /* Contributions menu */
     html .cx-callout-1::after {
-        border-bottom-color: #DDD;
+        border-bottom-color: #ddd;
     }
 
     /* Mobile Wikipedia logo mobile header */
@@ -210,7 +209,6 @@ html {
     }
 }
 
-/* stylelint-disable-next-line */
 @-moz-document url-prefix() {
     body {
         background: #000;
