修正===768px时的背景颜色
正好768px时背景依旧为宽屏颜色但整体UI已经切换为窄屏UI

--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -7,7 +7,7 @@ body.skin-moeskin #moe-global-background {
 }
 
 /* 在常规屏幕设备上使文章区域略微透明，以便展示背景图片 */
-@media (width >= 768px) {
+@media (width > 768px) {
     body.skin-moeskin #moe-main-container {
         --theme-card-background-color: rgb(255 255 255 / 94%);
     }
