--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -75,7 +75,7 @@ aside#moe-global-siderail #moe-custom-sidenav-block h2 {
 }
 
 /* 移动设备优化 */
-@media (width <= 576px) {
+@media (width <=576px) {
 
     /* 清除浮动 */
     body.skin-moeskin .mw-parser-output > * {
@@ -94,7 +94,7 @@ aside#moe-global-siderail #moe-custom-sidenav-block h2 {
 }
 
 /* 优化[[T:Navbox]]在窄屏设备的体验 */
-@media (width <= 768px) {
+@media (width <=768px) {
     html > body.skin-moeskin .navbox {
         border: 1px solid #AAA;
         clear: both;
@@ -167,6 +167,13 @@ a > img {
     width: 100vw !important;
 }
 
+/* @fix 临时修复[[T:Info]] img 元素的高度 */
+@media (max-width: 576px) {
+    #mw-content-text .infoBox .infoBoxIcon img:not([height]) {
+        height: auto;
+    }
+}
+
 /* 搜索页样式 */
 .skin-moeskin #mw-search-top-table {
     display: flex;
@@ -177,7 +184,7 @@ a > img {
     flex: 1;
 }
 
-@media (width <= 768px) {
+@media (width <=768px) {
     .skin-moeskin #mw-search-top-table {
         flex-direction: column;
     }
@@ -187,7 +194,7 @@ a > img {
     }
 }
 
-@media (width >= 768px) {
+@media (width >=768px) {
     .skin-moeskin #mw-search-top-table {
         justify-content: space-between;
     }
@@ -205,7 +212,7 @@ a > img {
 }
 
 /* 优化[[T:注解]]在窄屏设备的体验 */
-@media (width <= 768px) {
+@media (width <=768px) {
     html > body.skin-moeskin sup.mobileref {
         display: none;
     }
