--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -168,7 +168,7 @@ a > img {
 }
 
 /* @fix 临时修复[[T:Info]] img 元素的高度 */
-@media (max-width: 576px) {
+@media (width <=576px) {
     #mw-content-text .infoBox .infoBoxIcon img:not([height]) {
         height: auto;
     }
