fix: 避免潜在的误伤
来自U:あめろ的建议

--- a/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
+++ b/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
@@ -257,8 +257,8 @@
 }
 
 /* 列表的上边距导致[[T:columns-list]]首列少一行 */
-.columns-list>ul,
-.columns-list>ol {
+.columns-list>ul:first-child,
+.columns-list>ol:first-child {
     margin-top: 0;
 }
 
