fix: T:注解受父元素影响无法正常显示

--- a/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
+++ b/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
@@ -243,6 +243,9 @@
  
 .annotation .oo-ui-popupWidget {
     z-index: 10;
+    white-space: normal;
+    color: #000;
+    font-weight: normal;
 }
  
 .annotation .oo-ui-popupWidget-popup {
