--- a/src/gadgets/vector-styles/MediaWiki:Gadget-vector-styles.css
+++ b/src/gadgets/vector-styles/MediaWiki:Gadget-vector-styles.css
@@ -5,9 +5,9 @@
  * 复制之后请把图片换成自己网站上URL地址！
  */
 
-/* 2023春季topbar */
+/* 2023周年topbar */
 body.skin-vector {
-    background: url("https://img.moegirl.org.cn/topbar/zhMoegirl_2022Spring.jpg") no-repeat top left #F6F6F6;
+    background: url("https://app.moegirl.org.cn/background/2023Anniversary/vector.jpg") no-repeat top left #F6F6F6;
 }
 
 /* 侧边栏、顶部栏 */
