--- a/src/gadgets/Purgecache/MediaWiki:Gadget-Purgecache.css
+++ b/src/gadgets/Purgecache/MediaWiki:Gadget-Purgecache.css
@@ -10,16 +10,16 @@
     --n-color-focus: #0000;
     --n-color-disabled: #0000;
     --n-ripple-color: #18a058;
-    --n-text-color: rgb(51, 54, 57);
+    --n-text-color: rgb(51 54 57);
     --n-text-color-hover: #36ad6a;
     --n-text-color-pressed: #0c7a43;
     --n-text-color-focus: #36ad6a;
-    --n-text-color-disabled: rgb(51, 54, 57);
-    --n-border: 1px solid rgb(224, 224, 230);
+    --n-text-color-disabled: rgb(51 54 57);
+    --n-border: 1px solid rgb(224 224 230);
     --n-border-hover: 1px solid #36ad6a;
     --n-border-pressed: 1px solid #0c7a43;
     --n-border-focus: 1px solid #36ad6a;
-    --n-border-disabled: 1px solid rgb(224, 224, 230);
+    --n-border-disabled: 1px solid rgb(224 224 230);
     --n-width: initial;
     --n-height: 22px;
     --n-font-size: 12px;
