fix(site-style): 注解被遮挡

--- a/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
+++ b/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
@@ -242,7 +242,7 @@
 }
  
 .annotation .oo-ui-popupWidget {
-    z-index: 10;
+    z-index: 1000001;
     white-space: normal;
     color: #000;
     font-weight: normal;
