fix: start value has mixed support, consider using flex-start instead [autoprefixer]

--- a/src/gadgets/MarkAsResolved/MediaWiki:Gadget-MarkAsResolved.css
+++ b/src/gadgets/MarkAsResolved/MediaWiki:Gadget-MarkAsResolved.css
@@ -9,7 +9,7 @@
 .AnnTools_RadioSelectWidget_column_2.oo-ui-radioSelectWidget {
     display: flex;
     flex-wrap: wrap;
-    place-content: start;
+    place-content: flex-start;
     align-items: flex-start;
 }
 
